--- a/password_manager_electron/password_manager/src/pages/index.css
+++ b/password_manager_electron/password_manager/src/pages/index.css
@@ -207,5 +207,5 @@ a {
     justify-content: center;
     align-items: center;
     background-image: url(../assets/images/cherry-blossoms-butterflies-wallpaper-preview.jpg)
-  };
+  }
 }
