--- a/password_manager_electron/password_manager/src/pages/index.css
+++ b/password_manager_electron/password_manager/src/pages/index.css
@@ -45,6 +45,10 @@ label {
   -webkit-transition: 0.2s ease all;
 }
 
+.electron input:focus ~ label, .electron input:valid ~ label {
+  top: -5px;
+}
+
 input:focus ~ label, input:valid ~ label {
   top: -45px;
   font-size: 2vh;
@@ -99,17 +103,6 @@ a {
   font-size: 2.5vh;
   font-family: JettBrains-regular;
   font-weight: bold;
-}
-
-.header {
-  background: rgba(109, 60, 82, 0.75);
-  margin-top: 2vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  border-radius: 2vh;
-  width: 100%;
 }
 
 .card {
@@ -193,11 +186,15 @@ a {
 }
 
 @media (min-width: 1000px) {
+  .electron input:focus ~ label, .electron input:valid ~ label {
+    top: -20px;
+  }
+
   input:focus ~ label, input:valid ~ label {
     top: -20px
   }
 
-  .header, .card {
+  .card {
     width: 80%;
   }
 
